--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,5 +1,11 @@
 <div>
 
+    <a href="{% url 'make_post' %}"> Make Post</a>
+
+</div>
+
+<div>
+
     <!-- self.object_list contain the list of objects that the view is operating
     in this case, post. 
     -->
