--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'nav.html' %}
-
+ 
 {% block content %}
 
 
-<div>
+<div >
 
     <a href="{% url 'make_post' %}"> Make Post</a>
 
@@ -19,10 +19,12 @@
     {% for post in object_list %}
         <p> {{post.title}} </p>
         <a href="{% url 'post_detail' post.pk %}">
-            <img src = "{{ post.image }}" width=200 height=200>
+            <img src = "{{ post.image }}" width=700 height=400>
         </a>
     {% endfor %}
 
 </div>
 
-{% endblock %}
+
+
+{% endblock content %}
