like and comment

--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load custom_tags %}
+
 {% block content %}
 
 <div class="profile">
@@ -19,18 +21,16 @@
                             <button class="edit-profile">Edit Profile</button>
                         </a>
                     {% else %}
-                        {% comment %} {% is_following user object as following %} {% endcomment %}
+                        {% is_following user object as following %} 
                         <div class="follow-toggle__container">
-                            {% comment %} <button class="btn btn-primary {% if not following %}follow-user{% else %}unfollow-user{% endif %}" id="{{ object.pk }}">
+                            <button class="btn btn-primary {% if not following %}follow-user{% else %}unfollow-user{% endif %}" id="{{ object.pk }}">
                                 {% if following %}
                                     Unfollow
                                 {% else %}
                                     Follow
                                 {% endif %}
-                            </button> {% endcomment %}
-                            <button class="btn btn-primary">
-                                Follow
-                            </button>
+                            </button> 
+                            
                         </div>
                     {% endif %}
                 </div>
